# smb-tui

./: .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml  smb-tui.spec  smb_cli.py  smb_config.py  smb_tui.py  smb_users.py
.github/workflows/: release.yml
