[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "smb-tui"
version = "0.1.0"
description = "Terminal UI and CLI for managing Samba (smb.conf) configuration"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "textual>=0.80.0",
]

[project.scripts]
smb = "smb_cli:main"
smb-tui = "smb_tui:main"

[tool.setuptools]
py-modules = ["smb_cli", "smb_config", "smb_tui", "smb_users"]
